--- a/doc/man1/openssl-s_client.pod.in
+++ b/doc/man1/openssl-s_client.pod.in
@@ -642,7 +642,7 @@ colon (":") separated list of TLSv1.3 ciphersuite names.
 Send the protocol-specific message(s) to switch to TLS for communication.
 I<protocol> is a keyword for the intended protocol.  Currently, the only
 supported keywords are "smtp", "pop3", "imap", "ftp", "xmpp", "xmpp-server",
-"irc", "postgres", "mysql", "lmtp", "nntp", "sieve" and "ldap".
+"irc", "postgres", "mysql", "lmtp", "nntp", "sieve", "ldap", and "rpc".
 
 =item B<-xmpphost> I<hostname>
 
